--- a/package.json
+++ b/package.json
@@ -1,16 +1,34 @@
 {
   "name": "quickstart-node-js",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "private": true,
-  "scripts": {
-    "start": "node ./bin/www"
-  },
   "dependencies": {
+    "@babel/core": "^7.8.7",
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/plugin-proposal-decorators": "^7.8.3",
+    "@babel/plugin-transform-arrow-functions": "^7.8.3",
+    "@babel/plugin-transform-runtime": "^7.8.3",
+    "@babel/preset-env": "^7.8.7",
+    "@babel/preset-flow": "^7.8.3",
+    "@babel/register": "^7.8.6",
     "cookie-parser": "~1.4.4",
+    "cross-env": "^7.0.2",
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "hbs": "~4.0.4",
     "http-errors": "~1.6.3",
-    "morgan": "~1.9.1"
+    "ignore-styles": "^5.0.1",
+    "morgan": "~1.9.1",
+    "mysql": "^2.18.1",
+    "node-dependency-injection": "^2.6.2",
+    "typeorm": "^0.2.24"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.8.4",
+    "nodemon": "^2.0.2"
+  },
+  "scripts": {
+    "start": "cross-env NODE_ENV=local nodemon --watch 'src/**/*.js' --ignore 'src/**/*.spect.js' --exec node --inspect=127.0.0.1:9229 -r @babel/register src/index.js",
+    "start:debug": "node inspect -r @babel/register"
   }
 }
