--- a/.babelrc
+++ b/.babelrc
@@ -5,7 +5,7 @@
     ],
     presets: [
         "@babel/preset-env",
-        "@babel/preset-flow",
+        "@babel/preset-flow"
     ],
     plugins: [
 	["@babel/plugin-proposal-decorators", { legacy: true }],
