--- a/ormconfig.json
+++ b/ormconfig.json
@@ -1,24 +1,24 @@
 {
-  "name": "default",
-  "type": "mysql",
-  "host": "localhost",
-  "port": 3306,
-  "username": "nhulanha",
-  "password": "nhulanha123",
-  "database": "nhulanha-account",
-  "synchronize": false,
-  "entities": [
-    "src/entity/*.js"
-  ],
-  "subscribers": [
-    "src/subscriber/*.js"
-  ],
-  "migrations": [
-    "src/migration/*.js"
-  ],
-  "cli": {
-    "entitiesDir": "src/entity",
-    "migrationsDir": "src/migration",
-    "subscribersDir": "src/subscriber"
-  }
+    "name": "default",
+    "type": "mysql",
+    "host": "localhost",
+    "port": 3306,
+    "username": "quickstart",
+    "password": "quickstart123",
+    "database": "quickstart",
+    "synchronize": false,
+    "entities": [
+        "src/entity/*.js"
+    ],
+    "subscribers": [
+        "src/subscriber/*.js"
+    ],
+    "migrations": [
+        "src/migration/*.js"
+    ],
+    "cli": {
+        "entitiesDir": "src/entity",
+        "migrationsDir": "src/migration",
+        "subscribersDir": "src/subscriber"
+    }
 }
