--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "hbs": "~4.0.4",
     "http-errors": "~1.6.3",
     "ignore-styles": "^5.0.1",
+    "moment": "^2.24.0",
     "morgan": "~1.9.1",
     "mysql": "^2.18.1",
     "node-dependency-injection": "^2.6.2",
