--- a/.babelrc
+++ b/.babelrc
@@ -1,17 +1,31 @@
 {    
-    ignore: [
+    "ignore": [
         "node_modules",
         "build"
     ],
-    presets: [
+    "presets": [
         "@babel/preset-env",
         "@babel/preset-flow"
     ],
-    plugins: [
-	    ["@babel/plugin-proposal-decorators", { legacy: true }],
+    "plugins": [
+	    ["@babel/plugin-proposal-decorators", { "legacy" : true }],
         "@babel/plugin-transform-arrow-functions",
-        ["@babel/plugin-proposal-class-properties", { loose: true }],
-        ["@babel/plugin-transform-runtime", { regenerator: true }]
+        ["@babel/plugin-proposal-class-properties", { "loose": true }],
+        ["@babel/plugin-transform-runtime", { "regenerator": true }],
+        ["module-resolver", {
+            "root": ["."],
+            "extensions": [
+                ".js",
+                ".ts",
+                ".tsx",
+                ".json"
+            ],
+            "alias": {
+                "src": ["./src/"],
+                "server": ["./server/"],
+                "test": ["./test/"],
+            }
+        }]
     ],
     "sourceMaps": "inline"
 }
