--- a/.babelrc
+++ b/.babelrc
@@ -4,7 +4,11 @@
         "build"
     ],
     "presets": [
-        "@babel/preset-env",
+        ["@babel/preset-env", {
+            "targets": {
+                "node": "12.18.3"
+            }
+        }],
         "@babel/preset-flow"
     ],
     "plugins": [
