--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "devDependencies": {
         "@babel/cli": "^7.8.4",
         "@types/node": "^13.9.1",
+        "husky": "^4.3.0",
         "nodemon": "^2.0.2",
         "typescript": "^4.0.3"
     },
@@ -37,5 +38,10 @@
         "compile:migration": "tsc src/migration/**/*",
         "typeorm:account": "node -r @babel/register ./node_modules/typeorm/cli.js --config ./src/ormconfig/ormconfig-account.js -c account",
         "ts-node": "./node_modules/.bin/ts-node"
+    },
+    "husky": {
+        "hooks": {
+            "pre-commit": "npm run typecheck"
+        }
     }
 }
