--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "http-errors": "~1.6.3",
         "ignore-styles": "^5.0.1",
         "moment": "^2.24.0",
+        "mongodb": "^3.6.2",
         "morgan": "~1.9.1",
         "node-dependency-injection": "^2.6.2"
     },
